--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-736.6KB/s(Youtube:不良林), server: 5.183.176.94, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.81MB/s(Youtube:不良林), server: 164.70.68.67, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.49MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-349.8KB/s(Youtube:不良林), server: 89.31.126.171, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-474.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇯🇵 日本-4.27MB/s(Youtube:不良林), server: 5.183.176.93, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.30MB/s(Youtube:不良林), server: 5.183.176.83, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.89MB/s(Youtube:不良林), server: 5.183.176.84, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-201.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 45.144.176.135, port: 3005, type: ss, cipher: aes-256-cfb, password: 987.085wrcgrwqs36.985}
   - {name: 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
   - {name: 🇺🇸 美国-4.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-736.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-736.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-736.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-736.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-736.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-736.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-736.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-349.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
