--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-474.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇯🇵 日本-4.27MB/s(Youtube:不良林), server: 5.183.176.93, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.30MB/s(Youtube:不良林), server: 5.183.176.83, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.89MB/s(Youtube:不良林), server: 5.183.176.84, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.24MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.82MB/s(Youtube:不良林), server: 89.31.126.147, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 捷克-1.02MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇯🇵 日本-656.3KB/s(Youtube:不良林), server: 5.183.176.91, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.92MB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-201.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 45.144.176.135, port: 3005, type: ss, cipher: aes-256-cfb, password: 987.085wrcgrwqs36.985}
   - {name: 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-656.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-656.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-656.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-656.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-656.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-656.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.82MB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-656.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
