--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.16MB/s(Youtube:不良林), server: 5.183.176.84, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.09MB/s(Youtube:不良林), server: 185.172.113.243, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.74MB/s(Youtube:不良林), server: 5.183.176.80, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-364.4KB/s(Youtube:不良林), server: 5.183.176.91, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.22MB/s(Youtube:不良林), server: 5.183.176.84, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-321.4KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-459.6KB/s(Youtube:不良林), server: 185.172.113.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.76MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-281.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.46MB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-201.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 45.144.176.135, port: 3005, type: ss, cipher: aes-256-cfb, password: 987.085wrcgrwqs36.985}
   - {name: 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-364.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-364.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-364.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-364.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-364.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-364.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-364.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
