--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-321.4KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-459.6KB/s(Youtube:不良林), server: 185.172.113.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-4.76MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-281.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.46MB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-201.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 45.144.176.135, port: 3005, type: ss, cipher: aes-256-cfb, password: 987.085wrcgrwqs36.985}
-  - {name: 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
+  - {name: 🇯🇵 日本-386.6KB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-160.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.30MB/s(Youtube:不良林), server: 5.183.176.83, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-3.11MB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-274.8KB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.61MB/s(Youtube:不良林), server: 5.183.176.81, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.07MB/s(Youtube:不良林), server: 5.183.176.81, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.27MB/s(Youtube:不良林), server: 5.183.176.84, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-4.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.50MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-321.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
 rules:
