--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-386.6KB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-160.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.30MB/s(Youtube:不良林), server: 5.183.176.83, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-3.11MB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-274.8KB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-7.01MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-718.0KB/s(Youtube:不良林), server: 5.183.176.84, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 台湾-4.74MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-378.3KB/s(Youtube:不良林), server: 5.183.176.80, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-707.9KB/s(Youtube:不良林), server: 5.183.176.83, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1.61MB/s(Youtube:不良林), server: 5.183.176.81, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1.07MB/s(Youtube:不良林), server: 5.183.176.81, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.27MB/s(Youtube:不良林), server: 5.183.176.84, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-4.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.50MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-718.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-718.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,34 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-718.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-4.74MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-718.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-718.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-718.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-274.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-718.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
 rules:
